Server - Add user endpoint
